# mealplanner

./: README.md  main.py  meals.json  models.py  pyproject.toml  tests.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
