[tool.poetry]
name = "cookplanerbe"
version = "0.1.0"
description = "Cook planner backend"
authors = ["Julien Dubost <julien.dubost@planny.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.22"
ipython = "^8.32.0"
starlette = "^0.45.3"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
